--- a/src/app/[locale]/work/projects/id/adaptive-design-system-for-archlight.mdx
+++ b/src/app/[locale]/work/projects/id/adaptive-design-system-for-archlight.mdx
@@ -10,8 +10,8 @@ images:
 team:
   - name: "Selene Yu"
     role: "Software Engineer"
-    avatar: "/images/avatar.jpg"
-    linkedIn: "https://www.linkedin.com/company/once-ui/"
+    avatar: "/images/avatar.jpeg"
+    linkedIn: "https://www.linkedin.com/in/once-ui/"
   - name: "Jane Smith"
     role: "Product Manager"
     avatar: "/images/projects/project-01/avatar-01.png"
