--- a/src/app/[locale]/work/projects/en/adaptive-design-system-for-archlight.mdx
+++ b/src/app/[locale]/work/projects/en/adaptive-design-system-for-archlight.mdx
@@ -1,45 +1,117 @@
 ---
-title: "Building an adaptive design system for Archlight"
-publishedAt: "2024-04-08"
-summary: "In this project, I developed a flexible and scalable design system using Next.js for front-end development and Figma for design collaboration."
+title: "Introducing Horizon: A Storytelling-Driven Storefront Theme"
+publishedAt: "2024-11-16"
+summary: "Explore Horizon, Swell's innovative storefront theme built to revolutionize ecommerce experiences. Featuring customer quizzes, memberships, and powerful subscription management, Horizon empowers businesses to create personalized and dynamic shopping experiences."
 images:
-  - "/images/projects/project-01/cover-01.jpg"
-  - "/images/projects/project-01/cover-02.jpg"
-  - "/images/projects/project-01/cover-03.jpg"
-  - "/images/projects/project-01/cover-04.jpg"
+  - "/images/projects/horizon/horizon-01.jpeg"
+  - "/images/projects/horizon/horizon-03.mp4"
+  - "/images/projects/horizon/cap-01.jpeg"
+  - "/images/projects/horizon/horizon-2.gif"
+  - "/images/projects/horizon/horizon-4.webp"
+
 team:
   - name: "Selene Yu"
     role: "Software Engineer"
     avatar: "/images/avatar.jpeg"
     linkedIn: "https://www.linkedin.com/company/once-ui/"
-  - name: "Jane Smith"
+  - name: "Ana Smith"
     role: "Product Manager"
     avatar: "/images/projects/project-01/avatar-01.png"
-    linkedIn: "https://www.linkedin.com/in/janesmith"
+    linkedIn: "https://www.linkedin.com/company/swellcommerce/"
 ---
 
 ## Overview
 
-In this project, I developed a flexible and scalable design system using Next.js for front-end development and Figma for design collaboration. The goal was to create a reusable component library that not only adheres to consistent design principles but is also easily extendable for future needs. The design system was aimed at improving the overall developer experience while maintaining visual consistency across multiple projects.
+In the rapidly evolving world of ecommerce, innovation is key to standing out. Customers no longer just buy products—they seek experiences. Swell, a forward-thinking commerce platform, has taken this to heart with the introduction of Horizon, a theme designed for storytelling.
+
+At its core, Swell’s mission is to empower businesses with tools to build unique, engaging, and personalized online shopping experiences. Horizon embodies this vision by combining intuitive design, flexible customization, and cutting-edge features for both developers and business owners.
+
+---
+
+## My Role
+
+As a **Full-Stack Developer** on the Storefront Team, I played an integral role in bringing Horizon to life:
+
+- **Frontend Development**: Built the React-based user interface for the theme, ensuring it was seamless and performance-optimized.
+- **API Integration**: Connected Swell's robust APIs to power features like personalized quizzes, memberships, and subscriptions.
+- **Payment Gateway**: Integrated Stripe for secure and efficient payment processing.
+- **Client Support**: Provided technical support and follow-ups with clients to ensure smooth implementation and adoption of Horizon.
+
+---
 
 ## Key Features
 
-- **Component Library**: Built a set of modular, reusable UI components using React and styled-components in Next.js, focusing on accessibility and responsiveness.
-- **Theming and Customization**: Integrated a theming system that allows easy switching and customization of color palettes, typography, and layout styles using CSS variables and Figma tokens.
-- **Figma Integration**: Collaborated closely with designers by setting up a shared design library in Figma. This library was synchronized with the codebase, ensuring design handoffs were seamless and that design tokens remained consistent across both platforms.
-- **Documentation and Usage Guidelines**: Developed comprehensive documentation with Storybook to showcase components, usage patterns, and best practices, ensuring the design system is easy to adopt by other teams.
+### **Personalized Customer Quizzes**
+Horizon includes a native quiz builder that enables you to better understand your customers' needs. With this tool, you can:
+
+- Ask tailored questions to gather customer preferences.
+- Dynamically configure product recommendations based on quiz responses.
+- Provide options for customers to add individual items or an entire recommended set to their cart in a single click.
+
+This personalization helps create a unique shopping experience, driving higher customer satisfaction and conversions.
+
+---
+
+### **Memberships with Exclusive Perks**
+Horizon makes it simple to set up and manage memberships with distinct tiers. For each membership level, you can offer:
+
+- Exclusive discounts and offers.
+- Access to select physical and digital products.
+- Personalized product samples.
+
+Utilizing Horizon’s Customer Groups functionality, you can reward loyalty and build long-term customer relationships with ease.
+
+---
+
+### **Powerful Subscription Management**
+Subscriptions are at the heart of modern ecommerce, and Horizon elevates this experience. Its flexible subscription system supports:
+
+- Multiple subscription types and frequencies (weekly, monthly, yearly, or custom).
+- A self-service Customer Portal where buyers can manage subscriptions directly—pausing, skipping, or canceling as needed.
+
+This adaptability ensures you can meet diverse customer preferences while maintaining seamless operations.
+
+---
+
+### **Developer-Friendly Customization**
+Horizon is built with developers in mind, offering complete flexibility and extendability. It includes:
+
+- **Next.js Framework**: For fast and scalable development.
+- **On-Demand ISR**: Enabling instant updates to content and products.
+- **Swell Node Library**: Simplifying backend logic and API interactions.
+- **Webhooks for Static Re-renders**: Ensuring your storefront stays up-to-date automatically.
+
+Developers can deploy Horizon stores on popular platforms like Vercel and Netlify, making hosting and scaling straightforward.
+
+---
 
 ## Technologies Used
 
-- **Next.js**: For fast, server-rendered React applications.
-- **Figma**: For creating and managing design assets and prototypes.
-- **Styled-Components**: For styling React components with a modular, themable approach.
-- **Storybook**: For building an interactive, documented component library.
+- **React/Next.js**: For seamless, high-performance user interfaces.
+- **Swell APIs**: For backend functionality, ensuring a powerful, flexible ecommerce foundation.
+- **Stripe**: For secure and streamlined payment processing.
+- **Modern Hosting Platforms**: Compatible with Vercel, Netlify, and others for optimal deployment flexibility.
+
+---
 
 ## Challenges and Learnings
 
-One key challenge was balancing the need for flexibility with the desire to maintain design consistency. The solution involved creating well-defined design tokens and establishing clear guidelines for when and how components could be customized. Additionally, setting up effective collaboration workflows between designers and developers using Figma and Git was a learning experience that greatly improved the process.
+Creating a theme as dynamic as Horizon meant addressing several challenges:
+
+- **Balancing Customization with Usability**: By integrating Swell's robust APIs and leveraging Next.js, we ensured developers could customize everything while merchants could launch quickly.
+- **Building for Scalability**: The addition of webhooks and on-demand ISR ensures Horizon grows with your business needs without compromising performance.
+- **Enhancing Collaboration**: Horizon’s developer-friendly tools made it easier for cross-functional teams to work together, from merchants to developers.
+
+---
 
 ## Outcome
 
-The design system is now actively used across multiple projects, leading to faster development cycles, fewer design inconsistencies, and improved collaboration between design and development teams. It has become a foundation for scaling our products efficiently while ensuring a cohesive user experience.
+Horizon empowers merchants to create a seamless and immersive ecommerce experience. Its native tools, such as quizzes and subscription management, enhance customer engagement, while developer-friendly features allow for limitless customization. With Horizon, Swell continues to redefine the possibilities of ecommerce, enabling businesses to thrive in an ever-evolving digital landscape.
+
+---
+
+## Explore Horizon
+
+Horizon is set to transform the way businesses approach ecommerce. Dive into the [Horizon demo](https://swell-horizon-demo.vercel.app/) to see its features in action and discover how it can enhance your storefront.
+
+---
