add more work and images

--- a/src/app/[locale]/work/projects/en/2-swell.mdx
+++ b/src/app/[locale]/work/projects/en/2-swell.mdx
@@ -10,13 +10,13 @@ images:
   - "/images/projects/horizon/horizon-4.webp"
 
 team:
-  - name: "Selene Yu"
-    role: "Software Engineer"
+  - name: "Richard Okonicha"
+    role: "Senior Software Engineer"
     avatar: "/images/avatar.jpeg"
-    linkedIn: "https://www.linkedin.com/company/once-ui/"
+    linkedIn: "https://www.linkedin.com/in/richardokonicha/"
   - name: "Ana Smith"
     role: "Product Manager"
-    avatar: "/images/projects/project-01/avatar-01.png"
+    avatar: "/images/projects/horizon/logo-1.png"
     linkedIn: "https://www.linkedin.com/company/swellcommerce/"
 ---
 
